<resources>
    <string name="app_name">FIAP ESG</string>
    <string name="login">Login</string>
    <string name="email">Your mail</string>
    <string name="senha">Password</string>
    <string name="esg">Environmental | Social | Governance </string>
    <string name="novoUsuario">Register New User</string>
    <string name="turma">2TINOA</string>
    <string name="nome">Name:</string>
    <string name="salvar">Save</string>
    <string name="titulo">Register New User</string>
    <string name="premio">Round Prize</string>
    <string name="rankingGeral">General Ranking</string>
    <string name="rankingMensal">Rouded Ranking</string>
    <string name="horta">Vegetable garden</string>
    <string name="alimentacao">Food</string>
    <string name="reciclagem">Recycling</string>
    <string name="voluntario">Voluntary</string>
    <string name="atividadeFisica">Physical activity</string>
    <string name="regulamento">Access the regulation</string>
    <string name="card">Food4All | 27/06/2023</string>
    <string name="cardDesc">Help us in this difficult challenge that is the fight against hunger, register and bring food to thousands of families and people in need. Register as a donor or volunteer.</string>
    <string name="btnCard">View Site</string>
    <string name="btnPontos">180 points</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="atual">1</string>

</resources>